# Additional-plugins-for-Audacious-3.4

./: AUTHORS  ChangeLog  INSTALL  README  README.md  config.h  config.h.in  config.status  configure  configure.ac  libtool  mk.sh
macadd/: CMakeLists.txt  maclib.pc  mk.sh
src/: Makefile.am  cue.c
src/autocue/: Makefile.am  cue.c
src/libape/: Makefile.am  mac.c  macbind.cpp  macbind.h
